Trabajando en el css.DMV

--- a/style.css
+++ b/style.css
@@ -2,3 +2,9 @@
   margin:0;
   padding: 0;
 }
+body{
+  width: 100vw;
+  height: 100vh;
+  background: linear-gradient(90deg, rgb(216, 39, 68),rgb(248, 248, 156));
+
+}
