Trabajando en el css.DMV

--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@
 body{
   width: 100vw;
   height: 100vh;
-  background: linear-gradient(10deg, rgb(216, 39, 68),rgb(248, 248, 156));
-
+  background: linear-gradient(90deg, rgb(216, 39, 68),rgb(109, 109, 254),rgb(248, 248, 156));
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
