--- a/style.css
+++ b/style.css
@@ -5,8 +5,13 @@
 body{
   width: 100vw;
   height: 100vh;
-  background: linear-gradient(90deg, rgb(216, 39, 68),rgb(109, 109, 254),rgb(248, 248, 156));
+  background: linear-gradient(20deg, rgb(216, 39, 68),rgb(109, 109, 254),rgb(248, 248, 156));
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+header{
+  width: 100%;
+  height: 100rem;
+  background-image: url("./banner.jpg");
 }
