--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 body{
   width: 100vw;
-  height: 100vh;
+  height: auto;
   background: linear-gradient(20deg, rgb(216, 39, 68),rgb(109, 109, 254),rgb(22, 238, 37));
   display: flex;
   flex-direction: column;
