--- a/style.css
+++ b/style.css
@@ -1,18 +1,26 @@
-*{
-  margin:0;
+@import url("https://fonts.googleapis.com/css2?family=Alkatra:wght@700&display=swap");
+* {
+  margin: 0;
   padding: 0;
 }
-body{
+body {
   width: 100vw;
   height: auto;
-  background: linear-gradient(90deg, rgb(216, 39, 68),rgb(22, 238, 37));
+  background: linear-gradient(90deg, rgb(216, 39, 68), rgb(22, 238, 37));
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-header{
+header {
   width: 100%;
   height: 10rem;
   background-image: url("./banner.jpg");
   background-size: contain;
+}
+h1 {
+  font-size: 5rem;
+  text-shadow: 0 0 15px rgb(000, 000, 000);
+  color: rgb(169, 247, 52);
+  animation: title 1s infinite;
+  font-family: 'Alkatra', cursive;
 }
