--- a/style.css
+++ b/style.css
@@ -37,3 +37,11 @@ hr {
 img {
   width: 30px;
 }
+main {
+  margin-top: 1rem;
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
