--- a/style.css
+++ b/style.css
@@ -44,4 +44,14 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
+
+}
+.finder-character{
+  width: 30rem;
+  height: 1rem;
+  font-size: 1.5rem;
+  border-radius: 20px;
+  background-color: rgb(14, 14, 14);
+  padding: 1rem;
+  color:rgb(245, 252, 234);
 }
