--- a/style.css
+++ b/style.css
@@ -75,3 +75,14 @@ main {
   width: 50%;
   height: 100%;
 }
+.card-character > .description-card{
+  width: 50%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.description-card > h2{
+  text-align: center;
+  color: rgba(246, 246, 13, 0.859);
+}
