Trabajando en el css y correccion de html .DMV

--- a/style.css
+++ b/style.css
@@ -85,4 +85,11 @@ main {
 .description-card > h2{
   text-align: center;
   color: rgba(246, 246, 13, 0.859);
+  text-shadow: 0 0 15px rgb(244, 237, 237);
+}
+.description-card > p{
+  font-size: 1.5rem;
+  text-align: center;
+  color:rgb(22, 238, 37);
+  margin-top:2rem ;
 }
