--- a/style.css
+++ b/style.css
@@ -93,3 +93,13 @@ main {
   color:rgb(22, 238, 37);
   margin-top:2rem ;
 }
+footer{
+  width: 100%;
+  height: 3rem;
+  background-color: rgb(14, 14, 14) ;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  bottom: 0;
+}
